--- a/public/game/index.html
+++ b/public/game/index.html
@@ -4,16 +4,22 @@
   </head>
   <body>
     <h1>Ant Game</h1>
-    <p id="test"></p>
-    <p id="locationCoord"></p>
-    <p id="playersCount">Players:</p>
-    <p id="Gamestate">Game is waiting for host to start</p>
-    <!-- make these appear by actually putting text in them when the game starts. format like "Points: 42" etc for the team -->
-    <p id="Timer"></p>
-    <p id="team1Points"></p>
-    <p id="team2Points"></p>
-    <p id="team3Points"></p>
-    <p id="team4Points"></p>
+    <div id="infoBlock">
+      <p id="test"></p>
+      <p id="locationCoord"></p>
+      <p id="playersCount">Players:</p>
+      <p id="Gamestate">Game is waiting for host to start</p>
+      <!-- make these appear by actually putting text in them when the game starts. format like "Points: 42" etc for the team -->
+      <p id="Timer"></p>
+      <p id="team1Points"></p>
+      <p id="team2Points"></p>
+      <p id="team3Points"></p>
+      <p id="team4Points"></p>
+    </div>
+    <div id="teamDisplay">
+      <p id="teamName">Team:</p>
+      <p id="teamMembers"></p>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
     
